@@ -1,7 +1,7 @@
 clear.heat=Clear Heat
 energy.conservation=Energy Conservation
 energy.skate.park=Energy Skate Park
-friction=Friction >>
+friction=Track Friction >>
 bounciness=Bounciness
 energy.vs.position=Energy vs. Position
 hide.friction=Hide Friction<<
